--- a/gulp/assets/stylesheets/application.scss
+++ b/gulp/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-//@import 'normalize-scss/normalize'; // @TODO fix import of Bower Components
+//@import 'normalize-scss/normalize'; // @TODO fix import of Bower components
 
 // Basics
 @import 'base/variables';
@@ -13,7 +13,6 @@
 
 
 // Bricks — import alphabetically, should be independent
-
 
 
 // Modules — import alphabetically, should be independent
