Updated Sass breakpoint mixin breakpoint-from with second argument '-height', this will clean up syntax where you need to check the height as well like fixed navigation.

--- a/gulp/assets/stylesheets/base/_mixins.scss
+++ b/gulp/assets/stylesheets/base/_mixins.scss
@@ -61,9 +61,17 @@
 
 
 // Breakpoint helpers
-@mixin breakpoint-from($min-width) {
-  @media only screen and (min-width: $min-width) {
-    @content;
+@mixin breakpoint-from($min-width, $min-height: auto) {
+  @if $min-height == auto {
+    @media only screen and (min-width: $min-width) {
+      @content;
+    }
+
+  } @else {
+    @media only screen and (min-width: $min-width) and (min-height: $min-height) {
+      @content;
+    }
+
   }
 }
 
